# scac-poc

./: README.md
Angular/: README.md  angular.json  package-lock.json  package.json
Angular/src/app/: app.component.html  app.component.ts  app.config.ts
ExpressJS/: README.md  index.js  package-lock.json  package.json
ExpressJS/models/: todo.js
FastAPI/: .gitignore  FastApi.md  Oauth2.md  __main__.py  crud.py  database.py  models.py  requirements.txt
ReactNative/: .gitignore  README.md  app.json  eas.json  package-lock.json  package.json
ReactNative/android/: settings.gradle
ReactNative/android/app/: build.gradle
ReactNative/app/: _layout.tsx
ReactNative/app/(tabs)/: _layout.tsx  index.tsx  newPage.tsx
ReactNative/components/: Button.tsx
ReactNative/components/ui/: IconSymbol.tsx
ReactNative/ios/: Podfile
ReactNative/ios/ReactNative/: Info.plist
ReactNative/ios/ReactNative.xcodeproj/: project.pbxproj
Reactjs/: README.md  package-lock.json  package.json
Reactjs/src/: App.css  App.js
Reactjs/src/Components/: Header.js
VueJs/: README.md  package-lock.json  package.json
VueJs/src/: App.vue
VueJs/src/router/: index.js
VueJs/src/views/: DeleteJsonApiView.vue  GetByIdJsonApiView.vue  JsonApiView.vue  PostJsonApiView.vue  (+1 more)
actix/: .gitignore  Cargo.toml  Dockerfile  README.md
actix-oauth2/: .gitignore  Cargo.toml  README.md
actix-oauth2/src/: config.rs  google_auth.rs  handler.rs  main.rs  microsoft_auth.rs  model.rs  response.rs
actix/src/: db.rs  main.rs
flutter-poc/apps/: README.md  pubspec.yaml
python-OAuth2/: oauth2Flask.py
(+22 files in other folders)
